# devmesh

./: README.md  pyproject.toml
devmesh/: __main__.py  cli.py  config.py  mesh.py  models.py  platform_detect.py  ports.py  remote.py  ssh.py
docs/: guide.md
